--- a/Lab Class 1/Task 2/Part 2/Task_2_8.html
+++ b/Lab Class 1/Task 2/Part 2/Task_2_8.html
@@ -4,19 +4,85 @@
 </head>
 <body>
     <form >
-        <fieldset>
-            <legend> Profile Picture </legend>
+        <table border="1">
+            <tr>
+                <th colspan="2"> Personal Profile </th>
+            </tr>
 
-            User Id <input type="text"> <br> <br>
+            <tr>
+                <td> Name </td>
+                <td> <input type="text" ></td>
+            </tr>
 
-            Picture <input type="file">
+            <tr>
+                <td> Email </td>
+                <td> <input type="email" ></td>
+            </tr>
 
-            <hr>
+            <tr>
+                <td> Gender </td>
+                
+                <td> 
+                    <input type="radio" value=""> Male 
+                    <input type="radio" value=""> Female 
+                    <input type="radio" value=""> Other 
+                </td>
+            </tr>
 
-            <input type="button" value="Submit"> 
+            <tr>
+                <td> Date of Birth </td>
+                <td>
+                    <input type="text" size="2">  / 
+                    <input type="text" size="2">  / 
+                    <input type="text" size="4"> (dd/mm/yyyy)
+                </td>
+            </tr>
 
-        </fieldset>
-        <br>
+            <tr>
+                <td> Blood Group </td>
+                <td> 
+                    <select >
+                        <option> A+ </option>
+                        <option> A- </option>
+                        <option> B+ </option>
+                        <option> B- </option>
+                        <option> O+ </option>
+                        <option> O- </option>
+                        <option> AB+ </option>
+                        <option> AB- </option>
+                    </select>
+                </td>
+
+            </tr>
+
+            <tr>
+                <td> Degree </td>
+                <td>
+                    <input type="checkbox"> SSC
+                    <input type="checkbox"> HSC 
+                    <input type="checkbox"> BSc
+                </td>
+            </tr>
+
+            <tr>
+                <td> Photo </td>
+                <td> <input type="file"> </td>
+            </tr>
+
+            <tr> 
+                <td rowspan="3"> </td>
+            </tr>
+
+            <tr>
+                <td align="right">
+                    <input type="button" value="Submit">
+                    <input type="button" value="Reset"> 
+                </td>
+            </tr>
+
+
+
+        </table>
 
     </form>
 </body>
