--- a/Lab Class 1/Task 2/Part 2/Task_2_8.html
+++ b/Lab Class 1/Task 2/Part 2/Task_2_8.html
@@ -23,9 +23,9 @@
                 <td> Gender </td>
                 
                 <td> 
-                    <input type="radio" value=""> Male 
-                    <input type="radio" value=""> Female 
-                    <input type="radio" value=""> Other 
+                    <input type="radio" name="gender"> Male 
+                    <input type="radio" name="gender"> Female 
+                    <input type="radio" name="gender"> Other 
                 </td>
             </tr>
 
@@ -69,14 +69,14 @@
                 <td> <input type="file"> </td>
             </tr>
 
-            <tr> 
-                <td rowspan="3"> </td>
+            <tr>
+                <td colspan="2"> &nbsp;&nbsp;&nbsp; </td>
             </tr>
 
             <tr>
-                <td align="right">
-                    <input type="button" value="Submit">
-                    <input type="button" value="Reset"> 
+                <td colspan="2" align="right">
+                    <input type="submit" value="Submit">
+                    <input type="reset" value="Reset"> 
                 </td>
             </tr>
 
