WEB TECHNOLOGY First Lab Class

--- a/Lab Class 1/Task 1/Part 2/Task_1_2_CV.html
+++ b/Lab Class 1/Task 1/Part 2/Task_1_2_CV.html
@@ -40,8 +40,7 @@
                 <ul>
                     <li>Programming: C++, C#, Java, Python</li>
                     <li>Database: OracleDB, MySQL, Microsoft SQL Server</li>
-                    <li>Tools: Git, Visual Studio, Visual Studio Code, Microsoft SQL</li>
-                    <li>Concepts: OOP, Data Structures</li>
+                    <li>Tools: Git, Visual Studio, Visual Studio Code, Microsoft SQL, Microsoft Excel</li>
                 </ul>
                 <hr>
 
