Web Technologies Lab Class 2 Tasks

--- a/Lab Class 2/Task 4/DOB_Validation.html
+++ b/Lab Class 2/Task 4/DOB_Validation.html
@@ -9,15 +9,20 @@
 
             &nbsp;&nbsp;&nbsp; dd &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; mm &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; yyyy <br> <br>
 
-            <input type="text" size="2">  / 
-            <input type="text" size="2">  / 
-            <input type="text" size="4"> 
+            <input type="text" size="2" id="dd">  / 
+            <input type="text" size="2" id="mm">  / 
+            <input type="text" size="4" id="yyyy"> 
             <br> 
             <hr>
-            <input type="button" value="Submit"> 
+            <input type="button" value="Submit" id="btn"> 
 
         </fieldset>
         
     </form>
+
+    <p id="msg"></p>
+
+    <script src="script.js"></script>
+
 </body>
 </html>
