--- a/Lab Class 2/Task 2/Email_Validation.html
+++ b/Lab Class 2/Task 2/Email_Validation.html
@@ -5,7 +5,7 @@
 <body>
     <form>
         Email <br><br>
-        <input type="email" name="email" id="email" onblur=""> <br> <br>
+        <input type="email" name="email" id="email"> <br> <br>
         <input type="button" name="submit" value="Submit" id="btn">
     </form>
     
