--- a/Lab Class 2/Task 3/Gender_Validation.html
+++ b/Lab Class 2/Task 3/Gender_Validation.html
@@ -7,17 +7,21 @@
         <fieldset>
             <legend> Gender </legend>
 
-            <input type="radio" value=""> Male 
-            <input type="radio" value=""> Female 
-            <input type="radio" value=""> Other 
+            <input type="radio" name="gender" id="male" value="Male"> Male 
+            <input type="radio" name="gender" id="female" value="Female"> Female 
+            <input type="radio" name="gender" id="other" value="Other"> Other 
             
-
         </fieldset>
         <br>
         
-        <input type="button" value="Submit"> 
+        <input type="button" name="submit" value="Submit" id="btn">
         <br> <br>
 
     </form>
+
+    <p id="msg"></p>
+
+    <script src="script.js"></script>
+
 </body>
 </html>
