--- a/Lab Class 2/Task 5/Degree_Validation.html
+++ b/Lab Class 2/Task 5/Degree_Validation.html
@@ -7,17 +7,22 @@
         <fieldset>
             <legend> Degree </legend>
 
-            <input type="checkbox"> SSC
-            <input type="checkbox"> HSC 
-            <input type="checkbox"> BSc
+            <input type="checkbox" id="ssc" > SSC
+            <input type="checkbox" id="hsc" > HSC 
+            <input type="checkbox" id="bsc" > BSc
             <br> 
 
         </fieldset>
         <br>
 
-        <input type="button" value="Submit"> 
+        <input type="button" value="Submit" id="btn"> 
         <br> <br>
         
     </form>
+
+    <p id="msg"></p>
+
+    <script src="script.js"></script>
+
 </body>
 </html>
